applications/prd/broker-mqtt/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: broker-mqtt
  labels:
    app: broker-mqtt
    environment: production
