applications/prd/broker-mqtt/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: broker-mqtt
  namespace: broker-mqtt
  labels:
    app: broker-mqtt
spec:
  replicas: 1
  selector:
    matchLabels:
      app: broker-mqtt
  template:
    metadata:
      labels:
        app: broker-mqtt
    spec:
      serviceAccountName: broker-mqtt
      containers:
      - name: vernemq
        image: vernemq/vernemq:latest
        imagePullPolicy: Always
        ports:
        - name: mqtts-device
          containerPort: 8883
          protocol: TCP
        - name: mqtts-backend
          containerPort: 8884
          protocol: TCP
        - name: ws
          containerPort: 9001
          protocol: TCP
        volumeMounts:
        - name: keyvault-files
          mountPath: /etc/vernemq/certs
          readOnly: true
        - name: keyvault-files
          mountPath: /etc/vernemq/vmq.passwd
          readOnly: true
          subPath: vmq.passwd
        - name: keyvault-files
          mountPath: /etc/vernemq/vmq.acl
          readOnly: true
          subPath: vmq.acl
      volumes:
      - name: keyvault-files
        csi:
          driver: secrets-store.csi.k8s.io
          readOnly: true
          volumeAttributes:
            secretProviderClass: broker-mqtt-keyvault-files
