applications/prd/broker-mqtt/service-public.yaml
apiVersion: v1
kind: Service
metadata:
  name: broker-mqtt-public
  namespace: broker-mqtt
  labels:
    app: broker-mqtt
spec:
  type: LoadBalancer
  ports:
  - name: mqtts-device
    port: 8883
    targetPort: 8883
    protocol: TCP
  selector:
    app: broker-mqtt
